Update technical debt